<resources>
    <string name="app_name">LanguageRunners</string>
    <string name="distance">Distance</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="time">00:00:00</string>

    <string name="java">Java</string>
    <string name="cpp">C++</string>
    <string name="kotlyn">Kotlyn</string>

    <string-array name="distances">
        <item>1000</item>
        <item>5000</item>
        <item>10000</item>
        <item>50000</item>
        <item>100000</item>
    </string-array>

</resources>
